// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Props matches snapshot with custom props 1`] = `
<div
  class="qux"
  style="position:relative;display:inline-block;text-align:left;opacity:0.5;direction:ltr;border-radius:6.5px;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s;touch-action:none;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none"
>
  <div
    class="react-switch-bg"
    style="height:13px;width:37px;margin:0;position:relative;background:#aabbcc;border-radius:6.5px;cursor:default;-webkit-transition:background 0.25s;-moz-transition:background 0.25s;transition:background 0.25s"
  >
    <div
      style="height:13px;width:19.5px;position:relative;opacity:1;pointer-events:none;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
    >
      <div
        style="color:pink;padding-top:2px;padding-left:6px;font-size:20px"
      >
        ❤
      </div>
    </div>
    <div
      style="height:13px;width:19.5px;position:absolute;opacity:0;right:0;top:0;pointer-events:none;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
    >
      <svg
        height="100%"
        style="position:absolute;top:0"
        viewBox="-2 -5 14 20"
        width="100%"
      >
        <path
          d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="react-switch-handle"
    style="height:9px;width:9px;background:#ffffff;display:inline-block;cursor:default;border-radius:50%;position:absolute;transform:translateX(26px);top:2px;outline:0;box-shadow:0px 1px 5px rgba(0, 0, 0, 0.6);border:0;-webkit-transition:background-color 0.25s, transform 0.25s, box-shadow 0.15s;-moz-transition:background-color 0.25s, transform 0.25s, box-shadow 0.15s;transition:background-color 0.25s, transform 0.25s, box-shadow 0.15s"
  />
  <input
    aria-label="bar"
    aria-labelledby="baz"
    checked=""
    disabled=""
    id="foo"
    role="switch"
    style="border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px"
    type="checkbox"
  />
</div>
`;

exports[`Props matches snapshot with default props 1`] = `
<div
  style="position:relative;display:inline-block;text-align:left;opacity:1;direction:ltr;border-radius:14px;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s;touch-action:none;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none"
>
  <div
    class="react-switch-bg"
    style="height:28px;width:56px;margin:0;position:relative;background:#888888;border-radius:14px;cursor:pointer;-webkit-transition:background 0.25s;-moz-transition:background 0.25s;transition:background 0.25s"
  >
    <div
      style="height:28px;width:30px;position:relative;opacity:0;pointer-events:none;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
    >
      <svg
        height="100%"
        style="position:absolute;top:0"
        viewBox="-2 -5 17 21"
        width="100%"
      >
        <path
          d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      style="height:28px;width:30px;position:absolute;opacity:1;right:0;top:0;pointer-events:none;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
    >
      <svg
        height="100%"
        style="position:absolute;top:0"
        viewBox="-2 -5 14 20"
        width="100%"
      >
        <path
          d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="react-switch-handle"
    style="height:26px;width:26px;background:#ffffff;display:inline-block;cursor:pointer;border-radius:50%;position:absolute;transform:translateX(1px);top:1px;outline:0;border:0;-webkit-transition:background-color 0.25s, transform 0.25s, box-shadow 0.15s;-moz-transition:background-color 0.25s, transform 0.25s, box-shadow 0.15s;transition:background-color 0.25s, transform 0.25s, box-shadow 0.15s"
  />
  <input
    role="switch"
    style="border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px"
    type="checkbox"
  />
</div>
`;
